--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
+<!-- This is a basic HTML file that simply loads my javascript files in the browser so I can 
+make examples and test things while I'm following along with an online course.  -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="index.js"></script>
-</head>
-<body>
-    
-</body>
+    <script src="stopwatch.js"></script>
+  </head>
+  <body></body>
 </html>
